Fix spacing on cmc modules page course tile

--- a/lms/static/sass/customer-specific/_course-card.scss
+++ b/lms/static/sass/customer-specific/_course-card.scss
@@ -1,6 +1,4 @@
 .cmc--course-tile {
-  margin: 0;
-  padding: 0;
 
   .course-image {
     display: block;
